// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component:SearchPanel displays last updated date when present 1`] = `
<div
  className="search-panel"
>
  <h2>
    Search complaint data 
    <span
      className="date-subscript"
    >
      (last updated: 
      <span>
        2/1/2016
      </span>
      )
    </span>
  </h2>
  <div>
    <nav
      className="search-bar"
    >
      <form
        action=""
        onSubmit={[Function]}
      >
        <h4>
          Search Within
        </h4>
        <div
          className="layout-row"
        >
          <div
            className="cf-select flex-fixed"
          >
            <select
              aria-label="Choose which field will be searched"
              id="searchField"
              onChange={[Function]}
              value={undefined}
            >
              <optgroup
                label="Search Within"
              >
                <option
                  value="all"
                >
                  All Data
                </option>
                <option
                  value="company"
                >
                  Company Name
                </option>
                <option
                  value="complaint_what_happened"
                >
                  Narratives
                </option>
              </optgroup>
            </select>
          </div>
          <div
            className="flex-all typeahead-portal"
          >
            <section
              className="typeahead "
              onBlur={[Function]}
              onFocus={[Function]}
            >
              <div
                className="m-btn-inside-input input-contains-label"
              >
                <label
                  className="input-contains-label_before input-contains-label_before__search"
                >
                  <span
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 880.6 1200\\" class=\\"cf-icon-svg\\"><path d=\\"M860.1 879.2L645.7 664.8c90.8-136.8 76-323-44.6-443.5-137.5-137.5-360.5-137.5-498 0s-137.5 360.5 0 498c118.5 118.4 303.9 137 443.5 44.6L761 978.3c27.3 27.3 71.7 27.3 99 0s27.4-71.8.1-99.1zm-508-116.9C191.4 762 61.3 631.5 61.6 470.8c.3-160.7 130.8-290.8 291.5-290.5s290.8 130.8 290.5 291.5c-.2 118.2-71.9 224.6-181.5 269.1-34.9 14.2-72.3 21.5-110 21.4z\\"></path></svg>",
                      }
                    }
                  />
                </label>
                <input
                  aria-label="The term to search for"
                  autoComplete="off"
                  className="a-text-input"
                  id="searchText"
                  onChange={[Function]}
                  onKeyDown={[Function]}
                  placeholder="Enter your search term(s)"
                  type="text"
                  value=""
                />
              </div>
            </section>
          </div>
          <button
            className="a-btn flex-fixed"
            type="submit"
          >
            Search
          </button>
          <div
            className="advanced-container flex-fixed"
          >
            <a
              className="a-btn a-btn__link o-expandable_cue-open"
              onClick={[Function]}
            >
              Show advanced search tips
            </a>
          </div>
        </div>
      </form>
    </nav>
  </div>
</div>
`;

exports[`component:SearchPanel renders without crashing 1`] = `
<div
  className="search-panel"
>
  <h2>
    Search complaint data 
  </h2>
  <div>
    <nav
      className="search-bar"
    >
      <form
        action=""
        onSubmit={[Function]}
      >
        <h4>
          Search Within
        </h4>
        <div
          className="layout-row"
        >
          <div
            className="cf-select flex-fixed"
          >
            <select
              aria-label="Choose which field will be searched"
              id="searchField"
              onChange={[Function]}
              value={undefined}
            >
              <optgroup
                label="Search Within"
              >
                <option
                  value="all"
                >
                  All Data
                </option>
                <option
                  value="company"
                >
                  Company Name
                </option>
                <option
                  value="complaint_what_happened"
                >
                  Narratives
                </option>
              </optgroup>
            </select>
          </div>
          <div
            className="flex-all typeahead-portal"
          >
            <section
              className="typeahead "
              onBlur={[Function]}
              onFocus={[Function]}
            >
              <div
                className="m-btn-inside-input input-contains-label"
              >
                <label
                  className="input-contains-label_before input-contains-label_before__search"
                >
                  <span
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 880.6 1200\\" class=\\"cf-icon-svg\\"><path d=\\"M860.1 879.2L645.7 664.8c90.8-136.8 76-323-44.6-443.5-137.5-137.5-360.5-137.5-498 0s-137.5 360.5 0 498c118.5 118.4 303.9 137 443.5 44.6L761 978.3c27.3 27.3 71.7 27.3 99 0s27.4-71.8.1-99.1zm-508-116.9C191.4 762 61.3 631.5 61.6 470.8c.3-160.7 130.8-290.8 291.5-290.5s290.8 130.8 290.5 291.5c-.2 118.2-71.9 224.6-181.5 269.1-34.9 14.2-72.3 21.5-110 21.4z\\"></path></svg>",
                      }
                    }
                  />
                </label>
                <input
                  aria-label="The term to search for"
                  autoComplete="off"
                  className="a-text-input"
                  id="searchText"
                  onChange={[Function]}
                  onKeyDown={[Function]}
                  placeholder="Enter your search term(s)"
                  type="text"
                  value=""
                />
              </div>
            </section>
          </div>
          <button
            className="a-btn flex-fixed"
            type="submit"
          >
            Search
          </button>
          <div
            className="advanced-container flex-fixed"
          >
            <a
              className="a-btn a-btn__link o-expandable_cue-open"
              onClick={[Function]}
            >
              Show advanced search tips
            </a>
          </div>
        </div>
      </form>
    </nav>
  </div>
</div>
`;
